{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 63,
  "lineage": "6786d189-d78a-0902-cc7d-49830171c9fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034507376f4b02e88",
            "association_id": "eipassoc-07d61edee5a491e6b",
            "domain": "vpc",
            "id": "eipalloc-034507376f4b02e88",
            "network_border_group": "us-east-1",
            "network_interface": "eni-009e96745bcdf3765",
            "private_dns": "ip-172-16-0-123.ec2.internal",
            "private_ip": "172.16.0.123",
            "public_dns": "ec2-34-225-99-2.compute-1.amazonaws.com",
            "public_ip": "34.225.99.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-EIP-Production",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-EIP-Production",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:internet-gateway/igw-005134b0932c6926b",
            "id": "igw-005134b0932c6926b",
            "owner_id": "044583939046",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "vpc-04754e4010d433f73-Internet-Gateway",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "vpc-04754e4010d433f73-Internet-Gateway",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034507376f4b02e88",
            "connectivity_type": "public",
            "id": "nat-06d670a5ee07f818e",
            "network_interface_id": "eni-009e96745bcdf3765",
            "private_ip": "172.16.0.123",
            "public_ip": "34.225.99.2",
            "subnet_id": "subnet-0216f8261dba1c035",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Nat-Production",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Nat-Production",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005134b0932c6926b",
            "id": "r-rtb-0eb940c3fa57c3d4f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb940c3fa57c3d4f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:route-table/rtb-0d188a4b2d6e1d9d7",
            "id": "rtb-0d188a4b2d6e1d9d7",
            "owner_id": "044583939046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:route-table/rtb-0eb940c3fa57c3d4f",
            "id": "rtb-0eb940c3fa57c3d4f",
            "owner_id": "044583939046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005134b0932c6926b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-041741fc94c16bf78",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3e2875c66236de8",
            "route_table_id": "rtb-0d188a4b2d6e1d9d7",
            "subnet_id": "subnet-041741fc94c16bf78"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-06252e90ae977c640",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d90ddf2ad99f29",
            "route_table_id": "rtb-0d188a4b2d6e1d9d7",
            "subnet_id": "subnet-06252e90ae977c640"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-09c4e766d815f2af3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950f944a6b5c4e4f",
            "route_table_id": "rtb-0d188a4b2d6e1d9d7",
            "subnet_id": "subnet-09c4e766d815f2af3"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0f0ebd7ac9afb2c0b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c851e292dc6b602b",
            "route_table_id": "rtb-0d188a4b2d6e1d9d7",
            "subnet_id": "subnet-0f0ebd7ac9afb2c0b"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0216f8261dba1c035",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa396ec63ac0c6af",
            "route_table_id": "rtb-0eb940c3fa57c3d4f",
            "subnet_id": "subnet-0216f8261dba1c035"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0d8b979f9a1bb8e45",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad0ff466f322b225",
            "route_table_id": "rtb-0eb940c3fa57c3d4f",
            "subnet_id": "subnet-0d8b979f9a1bb8e45"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:security-group/sg-052c875848f2df78d",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052c875848f2df78d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "044583939046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "123456789",
              "Name": "Bastion-SG",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "Bastion-SG",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:security-group/sg-0621a2dc24c990aec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0621a2dc24c990aec",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "044583939046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "123456789",
              "Name": "datalayer-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "datalayer-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:security-group/sg-01740ccc14ae01bab",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01740ccc14ae01bab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "044583939046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ext-alb-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ext-alb-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:security-group/sg-07f10ca93de0110ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f10ca93de0110ea",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "044583939046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "123456789",
              "Name": "int-alb-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "int-alb-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:security-group/sg-010b85a6da5b3d117",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010b85a6da5b3d117",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "044583939046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "123456789",
              "Name": "nginx-SG",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "nginx-SG",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:security-group/sg-02b3842833cd752c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b3842833cd752c3",
            "ingress": [],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "044583939046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "123456789",
              "Name": "webserver-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "webserver-sg",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2242357388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010b85a6da5b3d117",
            "security_group_rule_id": "sgr-01f222e8803ba7b53",
            "self": false,
            "source_security_group_id": "sg-052c875848f2df78d",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2134032393",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07f10ca93de0110ea",
            "security_group_rule_id": "sgr-030a83353e347f69f",
            "self": false,
            "source_security_group_id": "sg-010b85a6da5b3d117",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1586446299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07f10ca93de0110ea",
            "security_group_rule_id": "sgr-0fd854bb63ab32b9a",
            "self": false,
            "source_security_group_id": "sg-010b85a6da5b3d117",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3471210214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0621a2dc24c990aec",
            "security_group_rule_id": "sgr-07f24722f7797b501",
            "self": false,
            "source_security_group_id": "sg-052c875848f2df78d",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2175372291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0621a2dc24c990aec",
            "security_group_rule_id": "sgr-00b8e8e111a26f4fa",
            "self": false,
            "source_security_group_id": "sg-02b3842833cd752c3",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-309271689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0621a2dc24c990aec",
            "security_group_rule_id": "sgr-00247df49b363e0e4",
            "self": false,
            "source_security_group_id": "sg-02b3842833cd752c3",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-454357408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010b85a6da5b3d117",
            "security_group_rule_id": "sgr-09a3961c75a200d01",
            "self": false,
            "source_security_group_id": "sg-01740ccc14ae01bab",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-697311756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010b85a6da5b3d117",
            "security_group_rule_id": "sgr-05c7559c9d76cdd5c",
            "self": false,
            "source_security_group_id": "sg-01740ccc14ae01bab",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3602433503",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02b3842833cd752c3",
            "security_group_rule_id": "sgr-0a1ce2cf386c05bea",
            "self": false,
            "source_security_group_id": "sg-07f10ca93de0110ea",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-534580328",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02b3842833cd752c3",
            "security_group_rule_id": "sgr-00f6c6ee57744e219",
            "self": false,
            "source_security_group_id": "sg-07f10ca93de0110ea",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2405294266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02b3842833cd752c3",
            "security_group_rule_id": "sgr-0dfd523728dbf2346",
            "self": false,
            "source_security_group_id": "sg-052c875848f2df78d",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:subnet/subnet-041741fc94c16bf78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041741fc94c16bf78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044583939046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-0",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-0",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:subnet/subnet-0f0ebd7ac9afb2c0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0ebd7ac9afb2c0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044583939046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-1",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-1",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:subnet/subnet-09c4e766d815f2af3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4e766d815f2af3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044583939046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-2",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-2",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:subnet/subnet-06252e90ae977c640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06252e90ae977c640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044583939046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-3",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Private-subnet-3",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:subnet/subnet-0216f8261dba1c035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0216f8261dba1c035",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044583939046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Public-subnet-0",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Public-subnet-0",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:subnet/subnet-0d8b979f9a1bb8e45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8b979f9a1bb8e45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044583939046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-Public-subnet-1",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-Public-subnet-1",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "vpc_id": "vpc-04754e4010d433f73"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044583939046:vpc/vpc-04754e4010d433f73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-001833d57993ad864",
            "default_route_table_id": "rtb-0c4ffc283e7597a0b",
            "default_security_group_id": "sg-052827878b4854468",
            "dhcp_options_id": "dopt-0977eff2e512cbdf6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04754e4010d433f73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4ffc283e7597a0b",
            "owner_id": "044583939046",
            "tags": {
              "Billing-Account": "123456789",
              "Name": "ACS-vpc-Production",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            },
            "tags_all": {
              "Billing-Account": "123456789",
              "Name": "ACS-vpc-Production",
              "Owner-Email": "goodhi@gmail.comm",
              "managed-by": "Terraform"
            }
          }
        }
      ]
    }
  ]
}